--- a/src/Today.css
+++ b/src/Today.css
@@ -25,10 +25,12 @@
   font-size: 70px;
 }
 
-.temperature-units {
-  text-align: center;
-}
 .units {
   position: relative;
   top: -38px;
+}
+
+.today-temperature-units {
+  text-align: center;
+  display: block;
 }
